fix: github installation updated
